Add bonus management features with new DTOs and enhanced approval logic